<resources>
    <string name="app_name">NYTimes</string>
    <string name="a_main_tb">New York Times</string>
    <string name="no_articles">No articles found check your connection and try again</string>
    <string name="article_detail_tb">Article Detail</string>
    <string name="article_by_line">By Line</string>
    <string name="article_section">Section</string>
    <string name="article_sub_section">Subsection</string>
    <string name="article_source">Source</string>
    <string name="article_date">Published Date</string>

</resources>